--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "firebase": "^10.12.4",
+    "classnames": "^2.5.1",
+    "firebase": "10.12.5",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.52.1",
+    "react-hot-toast": "^2.4.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
